fix: alignment for sync status

--- a/webapp/src/containers/SyncStatus/SyncStatus.module.scss
+++ b/webapp/src/containers/SyncStatus/SyncStatus.module.scss
@@ -16,6 +16,7 @@
     line-height: 1rem;
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
 
   .blockStatus {
